--- a/demo3/src/main/resources/static/index.html
+++ b/demo3/src/main/resources/static/index.html
@@ -55,8 +55,8 @@
         <div class="container">
             <div class="row align-items-center py-md-5 py-3">
                 <div class="col-md-5 content-left pt-md-0 pt-5">
-                    <h1>使用 Shoulder-Framework 让开发更加轻松</h1>
-                    <p class="mt-3 mb-md-5 mb-4">利用 Shoulder-Framework 的全自动式装配，在 Spring-Boot 基础上进一步加速、规范网站开发！</p>
+                    <h1>使用 shoulder-framework 让开发更加轻松</h1>
+                    <p class="mt-3 mb-md-5 mb-4">利用 shoulder-framework 的全自动式装配，在 Spring-Boot 基础上进一步加速、规范网站开发！</p>
                     <b><p class="mt-3 mb-md-5 mb-4">你看到这个页面，说明已经登陆了，因为设置中只有通过认证的用户才可以访问这里！</p></b>
                     <a class="btn btn-primary btn-theme" href="#login.html">开始使用</a>
                 </div>
@@ -319,7 +319,7 @@
     <div class="partners py-5">
         <div class="container py-lg-3">
             <div class="heading text-center mx-auto">
-                <h3 class="head">超过 123456 用户使用 Shoulder-Framework </h3>
+                <h3 class="head">超过 123456 用户使用 shoulder-framework </h3>
             </div>
             <div class="row col-md-10 justify-content-between grid-part text-center mx-auto">
                 <div class="parts-w3ls col-sm-2 col-6 mt-5">
@@ -404,7 +404,7 @@
                         <h6 class="footer-title-28">Contact information</h6>
                         <ul>
                             <li>
-                                <p><strong>Address</strong> : <a href="http://github.com/ChinaLym/Shoulder-Framework">http://github.com/ChinaLym/Shoulder-Framework</a>
+                                <p><strong>Address</strong> : <a href="http://github.com/ChinaLym/shoulder-framework">http://github.com/ChinaLym/shoulder-framework</a>
                                 </p>
                             </li>
                             <li>
