--- a/shoulder-build/shoulder-base/shoulder-web/src/main/resources/test.html
+++ b/shoulder-build/shoulder-base/shoulder-web/src/main/resources/test.html
@@ -20,10 +20,7 @@
         <td>7</td>
         <td>8</td>
         <td colspan="13">9...21</td>
-        <td>22</td>
-        <td>23</td>
-        <td>24</td>
-        <td>25</td>
+        <td colspan="4">22....25</td>
         <td>26</td>
         <td colspan="32">27...58</td>
     </tr>
