upgrade archetype project

--- a/shoulder-archetype-simple/src/main/resources/archetype-resources/src/main/resources/static/index.html
+++ b/shoulder-archetype-simple/src/main/resources/archetype-resources/src/main/resources/static/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Shoulder</title>
+    <link type="icon" >
+    <!-- 链接站点的favicon图标 -->
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/favicon.svg">
+    <link rel="mask-icon" href="/favicon.svg">
     <style>
         body {
             font-family: Arial, sans-serif;
